# tournament-user-service

./: .env  .gitmodules  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: e2efdba18acf_created_user_and_profile_models.py
tournament_user_service/: db.py  main.py  models.py
